# robot_simulator

./: Dockerfile  LICENSE  README.md  docker-compose.yml
patches/: apply_patches.sh  check_libs.sh
patches/unitree_mujoco/: CMakeLists.txt  main.cc  platform_ui_adapter.cc  simulate.cc  simulate.h
robot_models/go2/: go2.xml  scene.xml
